# datafusion-objectstore-azure

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  test_utils.rs
src/object_store/: azure.rs
