[package]
edition = "2021"
name = "datafusion-objectstore-azure"
description = "Azure Storage as an ObjectStore for Datafusion"
version = "0.0.1"
homepage = "https://github.com/datafusion-contrib/datafusion-objectstore-azure"
repository = "https://github.com/datafusion-contrib/datafusion-objectstore-azure"
readme = "README.md"
authors = ["Robert Pack <r.pack@outlook.com>"]
license = "Apache-2.0"
keywords = ["arrow", "query", "sql", "datafusion"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "datafusion_objectstore_azure"
path = "src/lib.rs"

[dependencies]
azure_core = { git = "https://github.com/Azure/azure-sdk-for-rust", rev = "89e9f7189daf847b88b7e0b766ab52d69d546044" }
azure_storage = { git = "https://github.com/Azure/azure-sdk-for-rust", rev = "89e9f7189daf847b88b7e0b766ab52d69d546044" }
azure_storage_blobs = { git = "https://github.com/Azure/azure-sdk-for-rust", rev = "89e9f7189daf847b88b7e0b766ab52d69d546044" }
azure_storage_datalake = { git = "https://github.com/Azure/azure-sdk-for-rust", rev = "89e9f7189daf847b88b7e0b766ab52d69d546044" }

arrow = { version = "12.0.0", features = ["prettyprint"] }
async-trait = "0.1.52"
bytes = "1.1.0"
datafusion-data-access = { git = "https://github.com/apache/arrow-datafusion.git", rev = "886735304f0fa83a24ddc3b3e356aeff4aab78f2" }
futures = "0.3.19"
http = "0.2.6"
num_cpus = "1.13.1"
tokio = { version = "^1", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "sync",
  "fs",
] }

[dev-dependencies]
datafusion = { git = "https://github.com/apache/arrow-datafusion.git", rev = "886735304f0fa83a24ddc3b3e356aeff4aab78f2" }
dotenv = "*"
